@@ -40,6 +40,7 @@ if verbose < 0: silence_all_messages()
 
 from pokernetwork import pokernetworkconfig
 from pokernetwork.userstats import *
+from pokernetwork.pokerpackets import *
 
 settings_xml_server = """<?xml version="1.0" encoding="ISO-8859-1"?>
 <server verbose="3" ping="300000" autodeal="yes" simultaneous="4" chat="yes" >
@@ -201,16 +202,53 @@ class PokerUserStatsTestCase(unittest.TestCase):
                 self.assertEquals(u.getAttrValue(stat, table = t, serial = 2,
                                                  service = myService), None)
     # -------------------------------------------------------------------------
-    def test03_userStatsRankPercentileLookupBaseClass(self):
+    def test03_userStatsRankPercentileLookupClass(self):
         """test03_userStatsRankPercentileLookupBaseClass
         Tests the the RankPercentile lookup class."""
+
+        # Check that the class is structured properly.
         urpl = UserStatsRankPercentileLookup(PokerUserStatsTestCase.MockService(self.db))
         self.assertEquals(self.db, urpl.service.db)
         k = urpl.attr2accessor.keys()
         k.sort()
-        self.assertEquals(k, [ 'percentile', 'rank' ])
+        statsList = [ 'percentile', 'rank' ]
+        self.assertEquals(k, statsList)
+        self.assertEquals(urpl.requiredPacketFields, [ 'serial' ])
         for ii in k:
-            self.failUnless(isinstance(urpl.stat2accessor[ii], UserStatsRankPercentileAccessor))
+            self.failUnless(isinstance(urpl.attr2accessor[ii], UserStatsRankPercentileAccessor))
+
+        self.db.query("CREATE TABLE rank (user_serial INT, currency_serial INT, rank INT, percentile TINYINT)")
+        self.db.query("INSERT INTO rank VALUES(1, 2, 40, 50)")
+
+        # First, do a valid test which has appropriate data in the
+        # database
+        myTable = PokerUserStatsTestCase.MockTable(2)
+        clear_all_messages()
+        pack = urpl.getAttrsAsPacket(table = myTable, serial = 1)
+        self.assertEquals(pack.type, PACKET_POKER_PLAYER_STATS)
+        self.assertEquals(pack.serial, 1)
+        self.assertEquals(pack.rank, 40)
+        self.assertEquals(pack.percentile, 50)
+        self.assertEquals(get_messages(), [])
+
+        # Second, this will give a Attribute error because the service is
+        # None
+        errorStr = ""
+        try:
+            urpl.getAttrsAsPacket(table = myTable, serial = 1, service = None)
+            self.failIf(True)  # Should not be reached
+        except AttributeError, ae:
+            errorStr = ae.__str__()
+        self.assertEquals(errorStr, "'NoneType' object has no attribute 'db'")
+        self.assertEquals(get_messages(), [])
+
+        # Finally, test the attrs list packet.
+
+        pack = urpl.getSupportedAttrsAsPacket()
+        self.assertEquals(pack.type, PACKET_POKER_SUPPORTED_PLAYER_STATS)
+        self.assertEquals(pack.length, 12)
+        pack.attrs.sort()
+        self.assertEquals(pack.attrs, ['percentile', 'rank'])
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
